packages/frontend/build_log.txt

> @homerisk/frontend@1.0.0 build
> tsc && vite build

vite v5.4.21 building for production...
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /Users/espohr/Documents/HomeRisk/packages/frontend): [Error] Loading PostCSS Plugin failed: Class extends value #<Object> is not a constructor or null

(@/Users/espohr/Documents/HomeRisk/packages/frontend/postcss.config.js)
Error: Loading PostCSS Plugin failed: Class extends value #<Object> is not a constructor or null

(@/Users/espohr/Documents/HomeRisk/packages/frontend/postcss.config.js)
    at load (file:///Users/espohr/Documents/HomeRisk/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///Users/espohr/Documents/HomeRisk/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///Users/espohr/Documents/HomeRisk/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///Users/espohr/Documents/HomeRisk/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///Users/espohr/Documents/HomeRisk/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v22.19.0
npm error Lifecycle script `build` failed with error:
npm error code 1
npm error path /Users/espohr/Documents/HomeRisk/packages/frontend
npm error workspace @homerisk/frontend@1.0.0
npm error location /Users/espohr/Documents/HomeRisk/packages/frontend
npm error command failed
npm error command sh -c tsc && vite build
